<resources>
    <string name="app_name">Team-Plant-Power</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="value_celsius">" "</string>
    <string name="value_fahrenheit">" "</string>
    <string name="button_historical">Historical</string>
    <string name="value_light">" "</string>
    <string name="value_humidity">" "</string>
    <string name="button_set">Set</string>
    <string name="value_set_min">Min</string>
    <string name="value_set_max">Max</string>
    <string name="text_degree_c">°C</string>
    <string name="text_degree_f">°F</string>
</resources>
